// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CurvedTileModel can build a tile with the given size 1`] = `
CurvedTileModel {
  "direction": "right",
  "id": "curved-tile-1",
  "ratio": 1,
  "specs": TileSpecifications {
    "barrierChunks": 4,
    "barrierWidth": 5,
    "laneWidth": 80,
  },
}
`;

exports[`CurvedTileModel can build a tile with the given size and a ratio of 0.5 1`] = `
CurvedTileModel {
  "direction": "left",
  "id": "curved-tile-0.5",
  "ratio": 0.5,
  "specs": TileSpecifications {
    "barrierChunks": 4,
    "barrierWidth": 5,
    "laneWidth": 80,
  },
}
`;

exports[`CurvedTileModel can build a tile with the given size and a ratio of 1 1`] = `
CurvedTileModel {
  "direction": "left",
  "id": "curved-tile-1",
  "ratio": 1,
  "specs": TileSpecifications {
    "barrierChunks": 4,
    "barrierWidth": 5,
    "laneWidth": 80,
  },
}
`;

exports[`CurvedTileModel can build a tile with the given size and a ratio of 2 1`] = `
CurvedTileModel {
  "direction": "left",
  "id": "curved-tile-2",
  "ratio": 2,
  "specs": TileSpecifications {
    "barrierChunks": 4,
    "barrierWidth": 5,
    "laneWidth": 80,
  },
}
`;

exports[`CurvedTileModel can build a tile with the given size and a ratio of 3 1`] = `
CurvedTileModel {
  "direction": "left",
  "id": "curved-tile-3",
  "ratio": 3,
  "specs": TileSpecifications {
    "barrierChunks": 4,
    "barrierWidth": 5,
    "laneWidth": 80,
  },
}
`;

exports[`CurvedTileModel can build a tile with the given size and a ratio of 4 1`] = `
CurvedTileModel {
  "direction": "left",
  "id": "curved-tile-4",
  "ratio": 4,
  "specs": TileSpecifications {
    "barrierChunks": 4,
    "barrierWidth": 5,
    "laneWidth": 80,
  },
}
`;

exports[`CurvedTileModel can build a tile with the given size and direction 1`] = `
CurvedTileModel {
  "direction": "left",
  "id": "curved-tile-1",
  "ratio": 1,
  "specs": TileSpecifications {
    "barrierChunks": 4,
    "barrierWidth": 5,
    "laneWidth": 80,
  },
}
`;

exports[`CurvedTileModel can compute the angle of the curve for a tile with a ratio of 0.5 1`] = `45`;

exports[`CurvedTileModel can compute the angle of the curve for a tile with a ratio of 1 1`] = `90`;

exports[`CurvedTileModel can compute the angle of the curve for a tile with a ratio of 2 1`] = `45`;

exports[`CurvedTileModel can compute the angle of the curve for a tile with a ratio of 3 1`] = `30`;

exports[`CurvedTileModel can compute the angle of the curve for a tile with a ratio of 4 1`] = `22.5`;

exports[`CurvedTileModel can compute the angle of the output point for a tile oriented to the left with a ratio of 0.5 1`] = `315`;

exports[`CurvedTileModel can compute the angle of the output point for a tile oriented to the left with a ratio of 0.5 2`] = `45`;

exports[`CurvedTileModel can compute the angle of the output point for a tile oriented to the left with a ratio of 0.5 3`] = `315`;

exports[`CurvedTileModel can compute the angle of the output point for a tile oriented to the left with a ratio of 0.5 4`] = `45`;

exports[`CurvedTileModel can compute the angle of the output point for a tile oriented to the left with a ratio of 1 1`] = `270`;

exports[`CurvedTileModel can compute the angle of the output point for a tile oriented to the left with a ratio of 1 2`] = `0`;

exports[`CurvedTileModel can compute the angle of the output point for a tile oriented to the left with a ratio of 1 3`] = `270`;

exports[`CurvedTileModel can compute the angle of the output point for a tile oriented to the left with a ratio of 1 4`] = `0`;

exports[`CurvedTileModel can compute the angle of the output point for a tile oriented to the left with a ratio of 2 1`] = `315`;

exports[`CurvedTileModel can compute the angle of the output point for a tile oriented to the left with a ratio of 2 2`] = `45`;

exports[`CurvedTileModel can compute the angle of the output point for a tile oriented to the left with a ratio of 2 3`] = `315`;

exports[`CurvedTileModel can compute the angle of the output point for a tile oriented to the left with a ratio of 2 4`] = `45`;

exports[`CurvedTileModel can compute the angle of the output point for a tile oriented to the left with a ratio of 3 1`] = `330`;

exports[`CurvedTileModel can compute the angle of the output point for a tile oriented to the left with a ratio of 3 2`] = `60`;

exports[`CurvedTileModel can compute the angle of the output point for a tile oriented to the left with a ratio of 3 3`] = `330`;

exports[`CurvedTileModel can compute the angle of the output point for a tile oriented to the left with a ratio of 3 4`] = `60`;

exports[`CurvedTileModel can compute the angle of the output point for a tile oriented to the left with a ratio of 4 1`] = `337.5`;

exports[`CurvedTileModel can compute the angle of the output point for a tile oriented to the left with a ratio of 4 2`] = `67.5`;

exports[`CurvedTileModel can compute the angle of the output point for a tile oriented to the left with a ratio of 4 3`] = `337.5`;

exports[`CurvedTileModel can compute the angle of the output point for a tile oriented to the left with a ratio of 4 4`] = `67.5`;

exports[`CurvedTileModel can compute the angle of the output point for a tile oriented to the right with a ratio of 0.5 1`] = `45`;

exports[`CurvedTileModel can compute the angle of the output point for a tile oriented to the right with a ratio of 0.5 2`] = `135`;

exports[`CurvedTileModel can compute the angle of the output point for a tile oriented to the right with a ratio of 0.5 3`] = `45`;

exports[`CurvedTileModel can compute the angle of the output point for a tile oriented to the right with a ratio of 0.5 4`] = `135`;

exports[`CurvedTileModel can compute the angle of the output point for a tile oriented to the right with a ratio of 1 1`] = `90`;

exports[`CurvedTileModel can compute the angle of the output point for a tile oriented to the right with a ratio of 1 2`] = `180`;

exports[`CurvedTileModel can compute the angle of the output point for a tile oriented to the right with a ratio of 1 3`] = `90`;

exports[`CurvedTileModel can compute the angle of the output point for a tile oriented to the right with a ratio of 1 4`] = `180`;

exports[`CurvedTileModel can compute the angle of the output point for a tile oriented to the right with a ratio of 2 1`] = `45`;

exports[`CurvedTileModel can compute the angle of the output point for a tile oriented to the right with a ratio of 2 2`] = `135`;

exports[`CurvedTileModel can compute the angle of the output point for a tile oriented to the right with a ratio of 2 3`] = `45`;

exports[`CurvedTileModel can compute the angle of the output point for a tile oriented to the right with a ratio of 2 4`] = `135`;

exports[`CurvedTileModel can compute the angle of the output point for a tile oriented to the right with a ratio of 3 1`] = `30`;

exports[`CurvedTileModel can compute the angle of the output point for a tile oriented to the right with a ratio of 3 2`] = `120`;

exports[`CurvedTileModel can compute the angle of the output point for a tile oriented to the right with a ratio of 3 3`] = `30`;

exports[`CurvedTileModel can compute the angle of the output point for a tile oriented to the right with a ratio of 3 4`] = `120`;

exports[`CurvedTileModel can compute the angle of the output point for a tile oriented to the right with a ratio of 4 1`] = `22.5`;

exports[`CurvedTileModel can compute the angle of the output point for a tile oriented to the right with a ratio of 4 2`] = `112.5`;

exports[`CurvedTileModel can compute the angle of the output point for a tile oriented to the right with a ratio of 4 3`] = `22.5`;

exports[`CurvedTileModel can compute the angle of the output point for a tile oriented to the right with a ratio of 4 4`] = `112.5`;

exports[`CurvedTileModel can compute the bounding rectangle of the tile oriented to the left with a ratio of 1 and positioned at [100, 100] rotated by 45 degrees 1`] = `
Object {
  "center": Object {
    "x": 61.10912703473989,
    "y": 138.89087296526012,
  },
  "edge": Object {
    "x": 38.89087296526012,
    "y": 138.89087296526014,
  },
  "height": 141.42135623730948,
  "in": Object {
    "angle": 45,
    "x": 100,
    "y": 100,
  },
  "out": Object {
    "angle": 315,
    "x": 100,
    "y": 177.78174593052023,
  },
  "width": 92.92893218813452,
  "x": 38.89087296526012,
  "y": 68.18019484660536,
}
`;

exports[`CurvedTileModel can compute the bounding rectangle of the tile oriented to the left with a ratio of 1 and positioned at [undefined, undefined] rotated by undefined degrees 1`] = `
Object {
  "center": Object {
    "x": 0,
    "y": 55,
  },
  "edge": Object {
    "x": -15.71067811865474,
    "y": 70.71067811865476,
  },
  "height": 100,
  "in": Object {
    "angle": 0,
    "x": 0,
    "y": 0,
  },
  "out": Object {
    "angle": 270,
    "x": 55,
    "y": 55,
  },
  "width": 100.00000000000001,
  "x": -45,
  "y": 0,
}
`;

exports[`CurvedTileModel can compute the bounding rectangle of the tile oriented to the left with a ratio of 2 and positioned at [100, 100] rotated by 405 degrees 1`] = `
Object {
  "center": Object {
    "x": 51.67261889578037,
    "y": 148.32738110421965,
  },
  "edge": Object {
    "x": 22.657917068410143,
    "y": 136.3090980991115,
  },
  "height": 148.49242404917504,
  "in": Object {
    "angle": 45,
    "x": 100,
    "y": 100,
  },
  "out": Object {
    "angle": 0,
    "x": 51.67261889578038,
    "y": 216.67261889578037,
  },
  "width": 125.14718625761427,
  "x": 6.672618895780381,
  "y": 68.18019484660535,
}
`;

exports[`CurvedTileModel can compute the bounding rectangle of the tile oriented to the right with a ratio of 1 and positioned at [100, 100] rotated by 45 degrees 1`] = `
Object {
  "center": Object {
    "x": 61.10912703473989,
    "y": 138.89087296526012,
  },
  "edge": Object {
    "x": 61.109127034739885,
    "y": 161.10912703473988,
  },
  "height": 92.92893218813452,
  "in": Object {
    "angle": 45,
    "x": 100,
    "y": 100,
  },
  "out": Object {
    "angle": 135,
    "x": 22.21825406947977,
    "y": 100,
  },
  "width": 141.4213562373095,
  "x": -9.601551083914867,
  "y": 68.18019484660536,
}
`;

exports[`CurvedTileModel can compute the bounding rectangle of the tile oriented to the right with a ratio of 1 and positioned at [undefined, undefined] rotated by undefined degrees 1`] = `
Object {
  "center": Object {
    "x": 0,
    "y": 55,
  },
  "edge": Object {
    "x": 15.710678118654755,
    "y": 70.71067811865474,
  },
  "height": 100,
  "in": Object {
    "angle": 0,
    "x": 0,
    "y": 0,
  },
  "out": Object {
    "angle": 90,
    "x": -55,
    "y": 55,
  },
  "width": 100,
  "x": -55.00000000000001,
  "y": 0,
}
`;

exports[`CurvedTileModel can compute the bounding rectangle of the tile oriented to the right with a ratio of 2 and positioned at [100, 100] rotated by 405 degrees 1`] = `
Object {
  "center": Object {
    "x": 51.67261889578037,
    "y": 148.32738110421965,
  },
  "edge": Object {
    "x": 63.69090190088851,
    "y": 177.34208293158989,
  },
  "height": 125.14718625761434,
  "in": Object {
    "angle": 45,
    "x": 100,
    "y": 100,
  },
  "out": Object {
    "angle": 90,
    "x": -16.672618895780303,
    "y": 148.32738110421968,
  },
  "width": 148.49242404917496,
  "x": -16.67261889578031,
  "y": 68.18019484660535,
}
`;

exports[`CurvedTileModel can compute the center of the curve for a tile with a ratio of 0.5 1`] = `
Vector2D {
  "x": -55,
  "y": 0,
}
`;

exports[`CurvedTileModel can compute the center of the curve for a tile with a ratio of 0.5 2`] = `
Vector2D {
  "x": 45,
  "y": 100,
}
`;

exports[`CurvedTileModel can compute the center of the curve for a tile with a ratio of 1 1`] = `
Vector2D {
  "x": -55,
  "y": 0,
}
`;

exports[`CurvedTileModel can compute the center of the curve for a tile with a ratio of 1 2`] = `
Vector2D {
  "x": 45,
  "y": 100,
}
`;

exports[`CurvedTileModel can compute the center of the curve for a tile with a ratio of 2 1`] = `
Vector2D {
  "x": -165,
  "y": 0,
}
`;

exports[`CurvedTileModel can compute the center of the curve for a tile with a ratio of 2 2`] = `
Vector2D {
  "x": -65,
  "y": 100,
}
`;

exports[`CurvedTileModel can compute the center of the curve for a tile with a ratio of 3 1`] = `
Vector2D {
  "x": -275,
  "y": 0,
}
`;

exports[`CurvedTileModel can compute the center of the curve for a tile with a ratio of 3 2`] = `
Vector2D {
  "x": -175,
  "y": 100,
}
`;

exports[`CurvedTileModel can compute the center of the curve for a tile with a ratio of 4 1`] = `
Vector2D {
  "x": -385,
  "y": 0,
}
`;

exports[`CurvedTileModel can compute the center of the curve for a tile with a ratio of 4 2`] = `
Vector2D {
  "x": -285,
  "y": 100,
}
`;

exports[`CurvedTileModel can compute the inner radius of the curve for a tile with a ratio of 0.5 1`] = `10`;

exports[`CurvedTileModel can compute the inner radius of the curve for a tile with a ratio of 1 1`] = `10`;

exports[`CurvedTileModel can compute the inner radius of the curve for a tile with a ratio of 2 1`] = `120`;

exports[`CurvedTileModel can compute the inner radius of the curve for a tile with a ratio of 3 1`] = `230`;

exports[`CurvedTileModel can compute the inner radius of the curve for a tile with a ratio of 4 1`] = `340`;

exports[`CurvedTileModel can compute the number of chunks by side for a tile with a ratio of 0.5 1`] = `2`;

exports[`CurvedTileModel can compute the number of chunks by side for a tile with a ratio of 1 1`] = `4`;

exports[`CurvedTileModel can compute the number of chunks by side for a tile with a ratio of 2 1`] = `8`;

exports[`CurvedTileModel can compute the number of chunks by side for a tile with a ratio of 3 1`] = `12`;

exports[`CurvedTileModel can compute the number of chunks by side for a tile with a ratio of 4 1`] = `16`;

exports[`CurvedTileModel can compute the number of chunks for the inner curve for a tile with a ratio of 0.5 1`] = `1`;

exports[`CurvedTileModel can compute the number of chunks for the inner curve for a tile with a ratio of 1 1`] = `2`;

exports[`CurvedTileModel can compute the number of chunks for the inner curve for a tile with a ratio of 2 1`] = `4`;

exports[`CurvedTileModel can compute the number of chunks for the inner curve for a tile with a ratio of 3 1`] = `4`;

exports[`CurvedTileModel can compute the number of chunks for the inner curve for a tile with a ratio of 4 1`] = `4`;

exports[`CurvedTileModel can compute the number of chunks for the outer curve for a tile with a ratio of 0.5 1`] = `2`;

exports[`CurvedTileModel can compute the number of chunks for the outer curve for a tile with a ratio of 1 1`] = `4`;

exports[`CurvedTileModel can compute the number of chunks for the outer curve for a tile with a ratio of 2 1`] = `4`;

exports[`CurvedTileModel can compute the number of chunks for the outer curve for a tile with a ratio of 3 1`] = `4`;

exports[`CurvedTileModel can compute the number of chunks for the outer curve for a tile with a ratio of 4 1`] = `4`;

exports[`CurvedTileModel can compute the outer radius of the curve for a tile with a ratio of 0.5 1`] = `100`;

exports[`CurvedTileModel can compute the outer radius of the curve for a tile with a ratio of 1 1`] = `100`;

exports[`CurvedTileModel can compute the outer radius of the curve for a tile with a ratio of 2 1`] = `210`;

exports[`CurvedTileModel can compute the outer radius of the curve for a tile with a ratio of 3 1`] = `320`;

exports[`CurvedTileModel can compute the outer radius of the curve for a tile with a ratio of 4 1`] = `430`;

exports[`CurvedTileModel can compute the position of the center point for a tile with a ratio of 0.5 1`] = `
Vector2D {
  "x": 0,
  "y": 22.781745930520216,
}
`;

exports[`CurvedTileModel can compute the position of the center point for a tile with a ratio of 0.5 2`] = `
Vector2D {
  "x": 100,
  "y": 122.78174593052023,
}
`;

exports[`CurvedTileModel can compute the position of the center point for a tile with a ratio of 0.5 3`] = `
Vector2D {
  "x": 77.21825406947977,
  "y": 100,
}
`;

exports[`CurvedTileModel can compute the position of the center point for a tile with a ratio of 1 1`] = `
Vector2D {
  "x": 0,
  "y": 55,
}
`;

exports[`CurvedTileModel can compute the position of the center point for a tile with a ratio of 1 2`] = `
Vector2D {
  "x": 100,
  "y": 155,
}
`;

exports[`CurvedTileModel can compute the position of the center point for a tile with a ratio of 1 3`] = `
Vector2D {
  "x": 45,
  "y": 100,
}
`;

exports[`CurvedTileModel can compute the position of the center point for a tile with a ratio of 2 1`] = `
Vector2D {
  "x": 0,
  "y": 68.34523779156069,
}
`;

exports[`CurvedTileModel can compute the position of the center point for a tile with a ratio of 2 2`] = `
Vector2D {
  "x": 100,
  "y": 168.34523779156066,
}
`;

exports[`CurvedTileModel can compute the position of the center point for a tile with a ratio of 2 3`] = `
Vector2D {
  "x": 31.654762208439337,
  "y": 100,
}
`;

exports[`CurvedTileModel can compute the position of the center point for a tile with a ratio of 3 1`] = `
Vector2D {
  "x": 0,
  "y": 73.6860279185587,
}
`;

exports[`CurvedTileModel can compute the position of the center point for a tile with a ratio of 3 2`] = `
Vector2D {
  "x": 100,
  "y": 173.68602791855866,
}
`;

exports[`CurvedTileModel can compute the position of the center point for a tile with a ratio of 3 3`] = `
Vector2D {
  "x": 26.313972081441335,
  "y": 100,
}
`;

exports[`CurvedTileModel can compute the position of the center point for a tile with a ratio of 4 1`] = `
Vector2D {
  "x": 0,
  "y": 76.58126144116827,
}
`;

exports[`CurvedTileModel can compute the position of the center point for a tile with a ratio of 4 2`] = `
Vector2D {
  "x": 100,
  "y": 176.58126144116827,
}
`;

exports[`CurvedTileModel can compute the position of the center point for a tile with a ratio of 4 3`] = `
Vector2D {
  "x": 23.418738558831734,
  "y": 100,
}
`;

exports[`CurvedTileModel can compute the position of the edge point for a tile oriented to the left with a ratio of 0.5 1`] = `
Vector2D {
  "x": -37.38795325112868,
  "y": 38.26834323650899,
}
`;

exports[`CurvedTileModel can compute the position of the edge point for a tile oriented to the left with a ratio of 0.5 2`] = `
Vector2D {
  "x": 62.61204674887132,
  "y": 138.268343236509,
}
`;

exports[`CurvedTileModel can compute the position of the edge point for a tile oriented to the left with a ratio of 0.5 3`] = `
Vector2D {
  "x": 61.731656763491,
  "y": 62.61204674887132,
}
`;

exports[`CurvedTileModel can compute the position of the edge point for a tile oriented to the left with a ratio of 0.5 4`] = `
Vector2D {
  "x": -37.38795325112868,
  "y": 38.26834323650899,
}
`;

exports[`CurvedTileModel can compute the position of the edge point for a tile oriented to the left with a ratio of 0.5 5`] = `
Vector2D {
  "x": 62.61204674887132,
  "y": 138.268343236509,
}
`;

exports[`CurvedTileModel can compute the position of the edge point for a tile oriented to the left with a ratio of 0.5 6`] = `
Vector2D {
  "x": 61.731656763491,
  "y": 62.61204674887132,
}
`;

exports[`CurvedTileModel can compute the position of the edge point for a tile oriented to the left with a ratio of 1 1`] = `
Vector2D {
  "x": -15.71067811865474,
  "y": 70.71067811865476,
}
`;

exports[`CurvedTileModel can compute the position of the edge point for a tile oriented to the left with a ratio of 1 2`] = `
Vector2D {
  "x": 84.28932188134526,
  "y": 170.71067811865476,
}
`;

exports[`CurvedTileModel can compute the position of the edge point for a tile oriented to the left with a ratio of 1 3`] = `
Vector2D {
  "x": 29.289321881345245,
  "y": 84.28932188134526,
}
`;

exports[`CurvedTileModel can compute the position of the edge point for a tile oriented to the left with a ratio of 1 4`] = `
Vector2D {
  "x": -15.71067811865474,
  "y": 70.71067811865476,
}
`;

exports[`CurvedTileModel can compute the position of the edge point for a tile oriented to the left with a ratio of 1 5`] = `
Vector2D {
  "x": 84.28932188134526,
  "y": 170.71067811865476,
}
`;

exports[`CurvedTileModel can compute the position of the edge point for a tile oriented to the left with a ratio of 1 6`] = `
Vector2D {
  "x": 29.289321881345245,
  "y": 84.28932188134526,
}
`;

exports[`CurvedTileModel can compute the position of the edge point for a tile oriented to the left with a ratio of 2 1`] = `
Vector2D {
  "x": -29.014701827370203,
  "y": 80.36352079666888,
}
`;

exports[`CurvedTileModel can compute the position of the edge point for a tile oriented to the left with a ratio of 2 2`] = `
Vector2D {
  "x": 70.9852981726298,
  "y": 180.36352079666887,
}
`;

exports[`CurvedTileModel can compute the position of the edge point for a tile oriented to the left with a ratio of 2 3`] = `
Vector2D {
  "x": 19.636479203331135,
  "y": 70.9852981726298,
}
`;

exports[`CurvedTileModel can compute the position of the edge point for a tile oriented to the left with a ratio of 2 4`] = `
Vector2D {
  "x": -29.014701827370203,
  "y": 80.36352079666888,
}
`;

exports[`CurvedTileModel can compute the position of the edge point for a tile oriented to the left with a ratio of 2 5`] = `
Vector2D {
  "x": 70.9852981726298,
  "y": 180.36352079666887,
}
`;

exports[`CurvedTileModel can compute the position of the edge point for a tile oriented to the left with a ratio of 2 6`] = `
Vector2D {
  "x": 19.636479203331135,
  "y": 70.9852981726298,
}
`;

exports[`CurvedTileModel can compute the position of the edge point for a tile oriented to the left with a ratio of 3 1`] = `
Vector2D {
  "x": -34.096264412501796,
  "y": 82.82209443280672,
}
`;

exports[`CurvedTileModel can compute the position of the edge point for a tile oriented to the left with a ratio of 3 2`] = `
Vector2D {
  "x": 65.9037355874982,
  "y": 182.82209443280672,
}
`;

exports[`CurvedTileModel can compute the position of the edge point for a tile oriented to the left with a ratio of 3 3`] = `
Vector2D {
  "x": 17.177905567193278,
  "y": 65.9037355874982,
}
`;

exports[`CurvedTileModel can compute the position of the edge point for a tile oriented to the left with a ratio of 3 4`] = `
Vector2D {
  "x": -34.096264412501796,
  "y": 82.82209443280672,
}
`;

exports[`CurvedTileModel can compute the position of the edge point for a tile oriented to the left with a ratio of 3 5`] = `
Vector2D {
  "x": 65.9037355874982,
  "y": 182.82209443280672,
}
`;

exports[`CurvedTileModel can compute the position of the edge point for a tile oriented to the left with a ratio of 3 6`] = `
Vector2D {
  "x": 17.177905567193278,
  "y": 65.9037355874982,
}
`;

exports[`CurvedTileModel can compute the position of the edge point for a tile oriented to the left with a ratio of 4 1`] = `
Vector2D {
  "x": -36.737670573389096,
  "y": 83.88883846693511,
}
`;

exports[`CurvedTileModel can compute the position of the edge point for a tile oriented to the left with a ratio of 4 2`] = `
Vector2D {
  "x": 63.262329426610904,
  "y": 183.8888384669351,
}
`;

exports[`CurvedTileModel can compute the position of the edge point for a tile oriented to the left with a ratio of 4 3`] = `
Vector2D {
  "x": 16.111161533064887,
  "y": 63.26232942661091,
}
`;

exports[`CurvedTileModel can compute the position of the edge point for a tile oriented to the left with a ratio of 4 4`] = `
Vector2D {
  "x": -36.737670573389096,
  "y": 83.88883846693511,
}
`;

exports[`CurvedTileModel can compute the position of the edge point for a tile oriented to the left with a ratio of 4 5`] = `
Vector2D {
  "x": 63.262329426610904,
  "y": 183.8888384669351,
}
`;

exports[`CurvedTileModel can compute the position of the edge point for a tile oriented to the left with a ratio of 4 6`] = `
Vector2D {
  "x": 16.111161533064887,
  "y": 63.26232942661091,
}
`;

exports[`CurvedTileModel can compute the position of the edge point for a tile oriented to the right with a ratio of 0.5 1`] = `
Vector2D {
  "x": 37.38795325112868,
  "y": 38.268343236508976,
}
`;

exports[`CurvedTileModel can compute the position of the edge point for a tile oriented to the right with a ratio of 0.5 2`] = `
Vector2D {
  "x": 137.3879532511287,
  "y": 138.26834323650897,
}
`;

exports[`CurvedTileModel can compute the position of the edge point for a tile oriented to the right with a ratio of 0.5 3`] = `
Vector2D {
  "x": 61.73165676349103,
  "y": 137.3879532511287,
}
`;

exports[`CurvedTileModel can compute the position of the edge point for a tile oriented to the right with a ratio of 0.5 4`] = `
Vector2D {
  "x": 37.38795325112868,
  "y": 38.268343236508976,
}
`;

exports[`CurvedTileModel can compute the position of the edge point for a tile oriented to the right with a ratio of 0.5 5`] = `
Vector2D {
  "x": 137.3879532511287,
  "y": 138.26834323650897,
}
`;

exports[`CurvedTileModel can compute the position of the edge point for a tile oriented to the right with a ratio of 0.5 6`] = `
Vector2D {
  "x": 61.73165676349103,
  "y": 137.3879532511287,
}
`;

exports[`CurvedTileModel can compute the position of the edge point for a tile oriented to the right with a ratio of 1 1`] = `
Vector2D {
  "x": 15.710678118654755,
  "y": 70.71067811865474,
}
`;

exports[`CurvedTileModel can compute the position of the edge point for a tile oriented to the right with a ratio of 1 2`] = `
Vector2D {
  "x": 115.71067811865476,
  "y": 170.71067811865476,
}
`;

exports[`CurvedTileModel can compute the position of the edge point for a tile oriented to the right with a ratio of 1 3`] = `
Vector2D {
  "x": 29.289321881345245,
  "y": 115.71067811865476,
}
`;

exports[`CurvedTileModel can compute the position of the edge point for a tile oriented to the right with a ratio of 1 4`] = `
Vector2D {
  "x": 15.710678118654755,
  "y": 70.71067811865474,
}
`;

exports[`CurvedTileModel can compute the position of the edge point for a tile oriented to the right with a ratio of 1 5`] = `
Vector2D {
  "x": 115.71067811865476,
  "y": 170.71067811865476,
}
`;

exports[`CurvedTileModel can compute the position of the edge point for a tile oriented to the right with a ratio of 1 6`] = `
Vector2D {
  "x": 29.289321881345245,
  "y": 115.71067811865476,
}
`;

exports[`CurvedTileModel can compute the position of the edge point for a tile oriented to the right with a ratio of 2 1`] = `
Vector2D {
  "x": 29.014701827370203,
  "y": 80.36352079666885,
}
`;

exports[`CurvedTileModel can compute the position of the edge point for a tile oriented to the right with a ratio of 2 2`] = `
Vector2D {
  "x": 129.0147018273702,
  "y": 180.36352079666887,
}
`;

exports[`CurvedTileModel can compute the position of the edge point for a tile oriented to the right with a ratio of 2 3`] = `
Vector2D {
  "x": 19.636479203331135,
  "y": 129.0147018273702,
}
`;

exports[`CurvedTileModel can compute the position of the edge point for a tile oriented to the right with a ratio of 2 4`] = `
Vector2D {
  "x": 29.014701827370203,
  "y": 80.36352079666885,
}
`;

exports[`CurvedTileModel can compute the position of the edge point for a tile oriented to the right with a ratio of 2 5`] = `
Vector2D {
  "x": 129.0147018273702,
  "y": 180.36352079666887,
}
`;

exports[`CurvedTileModel can compute the position of the edge point for a tile oriented to the right with a ratio of 2 6`] = `
Vector2D {
  "x": 19.636479203331135,
  "y": 129.0147018273702,
}
`;

exports[`CurvedTileModel can compute the position of the edge point for a tile oriented to the right with a ratio of 3 1`] = `
Vector2D {
  "x": 34.09626441250185,
  "y": 82.82209443280664,
}
`;

exports[`CurvedTileModel can compute the position of the edge point for a tile oriented to the right with a ratio of 3 2`] = `
Vector2D {
  "x": 134.09626441250185,
  "y": 182.82209443280664,
}
`;

exports[`CurvedTileModel can compute the position of the edge point for a tile oriented to the right with a ratio of 3 3`] = `
Vector2D {
  "x": 17.177905567193363,
  "y": 134.09626441250185,
}
`;

exports[`CurvedTileModel can compute the position of the edge point for a tile oriented to the right with a ratio of 3 4`] = `
Vector2D {
  "x": 34.09626441250185,
  "y": 82.82209443280664,
}
`;

exports[`CurvedTileModel can compute the position of the edge point for a tile oriented to the right with a ratio of 3 5`] = `
Vector2D {
  "x": 134.09626441250185,
  "y": 182.82209443280664,
}
`;

exports[`CurvedTileModel can compute the position of the edge point for a tile oriented to the right with a ratio of 3 6`] = `
Vector2D {
  "x": 17.177905567193363,
  "y": 134.09626441250185,
}
`;

exports[`CurvedTileModel can compute the position of the edge point for a tile oriented to the right with a ratio of 4 1`] = `
Vector2D {
  "x": 36.737670573389096,
  "y": 83.88883846693514,
}
`;

exports[`CurvedTileModel can compute the position of the edge point for a tile oriented to the right with a ratio of 4 2`] = `
Vector2D {
  "x": 136.7376705733891,
  "y": 183.88883846693514,
}
`;

exports[`CurvedTileModel can compute the position of the edge point for a tile oriented to the right with a ratio of 4 3`] = `
Vector2D {
  "x": 16.11116153306486,
  "y": 136.7376705733891,
}
`;

exports[`CurvedTileModel can compute the position of the edge point for a tile oriented to the right with a ratio of 4 4`] = `
Vector2D {
  "x": 36.737670573389096,
  "y": 83.88883846693514,
}
`;

exports[`CurvedTileModel can compute the position of the edge point for a tile oriented to the right with a ratio of 4 5`] = `
Vector2D {
  "x": 136.7376705733891,
  "y": 183.88883846693514,
}
`;

exports[`CurvedTileModel can compute the position of the edge point for a tile oriented to the right with a ratio of 4 6`] = `
Vector2D {
  "x": 16.11116153306486,
  "y": 136.7376705733891,
}
`;

exports[`CurvedTileModel can compute the position of the output point for a tile oriented to the left with a ratio of 0.5 1`] = `
Vector2D {
  "x": 16.109127034739892,
  "y": 38.890872965260115,
}
`;

exports[`CurvedTileModel can compute the position of the output point for a tile oriented to the left with a ratio of 0.5 2`] = `
Vector2D {
  "x": 116.10912703473988,
  "y": 138.89087296526012,
}
`;

exports[`CurvedTileModel can compute the position of the output point for a tile oriented to the left with a ratio of 0.5 3`] = `
Vector2D {
  "x": 61.109127034739885,
  "y": 116.10912703473988,
}
`;

exports[`CurvedTileModel can compute the position of the output point for a tile oriented to the left with a ratio of 0.5 4`] = `
Vector2D {
  "x": 16.109127034739892,
  "y": 38.890872965260115,
}
`;

exports[`CurvedTileModel can compute the position of the output point for a tile oriented to the left with a ratio of 0.5 5`] = `
Vector2D {
  "x": 116.10912703473988,
  "y": 138.89087296526012,
}
`;

exports[`CurvedTileModel can compute the position of the output point for a tile oriented to the left with a ratio of 0.5 6`] = `
Vector2D {
  "x": 61.109127034739885,
  "y": 116.10912703473988,
}
`;

exports[`CurvedTileModel can compute the position of the output point for a tile oriented to the left with a ratio of 1 1`] = `
Vector2D {
  "x": 55,
  "y": 55,
}
`;

exports[`CurvedTileModel can compute the position of the output point for a tile oriented to the left with a ratio of 1 2`] = `
Vector2D {
  "x": 155,
  "y": 155,
}
`;

exports[`CurvedTileModel can compute the position of the output point for a tile oriented to the left with a ratio of 1 3`] = `
Vector2D {
  "x": 45,
  "y": 155,
}
`;

exports[`CurvedTileModel can compute the position of the output point for a tile oriented to the left with a ratio of 1 4`] = `
Vector2D {
  "x": 55,
  "y": 55,
}
`;

exports[`CurvedTileModel can compute the position of the output point for a tile oriented to the left with a ratio of 1 5`] = `
Vector2D {
  "x": 155,
  "y": 155,
}
`;

exports[`CurvedTileModel can compute the position of the output point for a tile oriented to the left with a ratio of 1 6`] = `
Vector2D {
  "x": 45,
  "y": 155,
}
`;

exports[`CurvedTileModel can compute the position of the output point for a tile oriented to the left with a ratio of 2 1`] = `
Vector2D {
  "x": 48.32738110421967,
  "y": 116.67261889578035,
}
`;

exports[`CurvedTileModel can compute the position of the output point for a tile oriented to the left with a ratio of 2 2`] = `
Vector2D {
  "x": 148.32738110421968,
  "y": 216.67261889578035,
}
`;

exports[`CurvedTileModel can compute the position of the output point for a tile oriented to the left with a ratio of 2 3`] = `
Vector2D {
  "x": -16.672618895780346,
  "y": 148.32738110421968,
}
`;

exports[`CurvedTileModel can compute the position of the output point for a tile oriented to the left with a ratio of 2 4`] = `
Vector2D {
  "x": 48.32738110421967,
  "y": 116.67261889578035,
}
`;

exports[`CurvedTileModel can compute the position of the output point for a tile oriented to the left with a ratio of 2 5`] = `
Vector2D {
  "x": 148.32738110421968,
  "y": 216.67261889578035,
}
`;

exports[`CurvedTileModel can compute the position of the output point for a tile oriented to the left with a ratio of 2 6`] = `
Vector2D {
  "x": -16.672618895780346,
  "y": 148.32738110421968,
}
`;

exports[`CurvedTileModel can compute the position of the output point for a tile oriented to the left with a ratio of 3 1`] = `
Vector2D {
  "x": 36.84301395927935,
  "y": 137.49999999999997,
}
`;

exports[`CurvedTileModel can compute the position of the output point for a tile oriented to the left with a ratio of 3 2`] = `
Vector2D {
  "x": 136.84301395927935,
  "y": 237.49999999999997,
}
`;

exports[`CurvedTileModel can compute the position of the output point for a tile oriented to the left with a ratio of 3 3`] = `
Vector2D {
  "x": -37.49999999999997,
  "y": 136.84301395927935,
}
`;

exports[`CurvedTileModel can compute the position of the output point for a tile oriented to the left with a ratio of 3 4`] = `
Vector2D {
  "x": 36.84301395927935,
  "y": 137.49999999999997,
}
`;

exports[`CurvedTileModel can compute the position of the output point for a tile oriented to the left with a ratio of 3 5`] = `
Vector2D {
  "x": 136.84301395927935,
  "y": 237.49999999999997,
}
`;

exports[`CurvedTileModel can compute the position of the output point for a tile oriented to the left with a ratio of 3 6`] = `
Vector2D {
  "x": -37.49999999999997,
  "y": 136.84301395927935,
}
`;

exports[`CurvedTileModel can compute the position of the output point for a tile oriented to the left with a ratio of 4 1`] = `
Vector2D {
  "x": 29.306379983154613,
  "y": 147.3331214605596,
}
`;

exports[`CurvedTileModel can compute the position of the output point for a tile oriented to the left with a ratio of 4 2`] = `
Vector2D {
  "x": 129.3063799831546,
  "y": 247.3331214605596,
}
`;

exports[`CurvedTileModel can compute the position of the output point for a tile oriented to the left with a ratio of 4 3`] = `
Vector2D {
  "x": -47.333121460559596,
  "y": 129.3063799831546,
}
`;

exports[`CurvedTileModel can compute the position of the output point for a tile oriented to the left with a ratio of 4 4`] = `
Vector2D {
  "x": 29.306379983154613,
  "y": 147.3331214605596,
}
`;

exports[`CurvedTileModel can compute the position of the output point for a tile oriented to the left with a ratio of 4 5`] = `
Vector2D {
  "x": 129.3063799831546,
  "y": 247.3331214605596,
}
`;

exports[`CurvedTileModel can compute the position of the output point for a tile oriented to the left with a ratio of 4 6`] = `
Vector2D {
  "x": -47.333121460559596,
  "y": 129.3063799831546,
}
`;

exports[`CurvedTileModel can compute the position of the output point for a tile oriented to the right with a ratio of 0.5 1`] = `
Vector2D {
  "x": -16.109127034739885,
  "y": 38.89087296526011,
}
`;

exports[`CurvedTileModel can compute the position of the output point for a tile oriented to the right with a ratio of 0.5 2`] = `
Vector2D {
  "x": 83.89087296526012,
  "y": 138.89087296526012,
}
`;

exports[`CurvedTileModel can compute the position of the output point for a tile oriented to the right with a ratio of 0.5 3`] = `
Vector2D {
  "x": 61.109127034739885,
  "y": 83.89087296526012,
}
`;

exports[`CurvedTileModel can compute the position of the output point for a tile oriented to the right with a ratio of 0.5 4`] = `
Vector2D {
  "x": -16.109127034739885,
  "y": 38.89087296526011,
}
`;

exports[`CurvedTileModel can compute the position of the output point for a tile oriented to the right with a ratio of 0.5 5`] = `
Vector2D {
  "x": 83.89087296526012,
  "y": 138.89087296526012,
}
`;

exports[`CurvedTileModel can compute the position of the output point for a tile oriented to the right with a ratio of 0.5 6`] = `
Vector2D {
  "x": 61.109127034739885,
  "y": 83.89087296526012,
}
`;

exports[`CurvedTileModel can compute the position of the output point for a tile oriented to the right with a ratio of 1 1`] = `
Vector2D {
  "x": -55,
  "y": 55,
}
`;

exports[`CurvedTileModel can compute the position of the output point for a tile oriented to the right with a ratio of 1 2`] = `
Vector2D {
  "x": 45,
  "y": 155,
}
`;

exports[`CurvedTileModel can compute the position of the output point for a tile oriented to the right with a ratio of 1 3`] = `
Vector2D {
  "x": 45,
  "y": 45,
}
`;

exports[`CurvedTileModel can compute the position of the output point for a tile oriented to the right with a ratio of 1 4`] = `
Vector2D {
  "x": -55,
  "y": 55,
}
`;

exports[`CurvedTileModel can compute the position of the output point for a tile oriented to the right with a ratio of 1 5`] = `
Vector2D {
  "x": 45,
  "y": 155,
}
`;

exports[`CurvedTileModel can compute the position of the output point for a tile oriented to the right with a ratio of 1 6`] = `
Vector2D {
  "x": 45,
  "y": 45,
}
`;

exports[`CurvedTileModel can compute the position of the output point for a tile oriented to the right with a ratio of 2 1`] = `
Vector2D {
  "x": -48.327381104219654,
  "y": 116.67261889578033,
}
`;

exports[`CurvedTileModel can compute the position of the output point for a tile oriented to the right with a ratio of 2 2`] = `
Vector2D {
  "x": 51.672618895780346,
  "y": 216.67261889578032,
}
`;

exports[`CurvedTileModel can compute the position of the output point for a tile oriented to the right with a ratio of 2 3`] = `
Vector2D {
  "x": -16.672618895780317,
  "y": 51.67261889578035,
}
`;

exports[`CurvedTileModel can compute the position of the output point for a tile oriented to the right with a ratio of 2 4`] = `
Vector2D {
  "x": -48.327381104219654,
  "y": 116.67261889578033,
}
`;

exports[`CurvedTileModel can compute the position of the output point for a tile oriented to the right with a ratio of 2 5`] = `
Vector2D {
  "x": 51.672618895780346,
  "y": 216.67261889578032,
}
`;

exports[`CurvedTileModel can compute the position of the output point for a tile oriented to the right with a ratio of 2 6`] = `
Vector2D {
  "x": -16.672618895780317,
  "y": 51.67261889578035,
}
`;

exports[`CurvedTileModel can compute the position of the output point for a tile oriented to the right with a ratio of 3 1`] = `
Vector2D {
  "x": -36.84301395927935,
  "y": 137.49999999999997,
}
`;

exports[`CurvedTileModel can compute the position of the output point for a tile oriented to the right with a ratio of 3 2`] = `
Vector2D {
  "x": 63.15698604072065,
  "y": 237.49999999999997,
}
`;

exports[`CurvedTileModel can compute the position of the output point for a tile oriented to the right with a ratio of 3 3`] = `
Vector2D {
  "x": -37.49999999999997,
  "y": 63.15698604072066,
}
`;

exports[`CurvedTileModel can compute the position of the output point for a tile oriented to the right with a ratio of 3 4`] = `
Vector2D {
  "x": -36.84301395927935,
  "y": 137.49999999999997,
}
`;

exports[`CurvedTileModel can compute the position of the output point for a tile oriented to the right with a ratio of 3 5`] = `
Vector2D {
  "x": 63.15698604072065,
  "y": 237.49999999999997,
}
`;

exports[`CurvedTileModel can compute the position of the output point for a tile oriented to the right with a ratio of 3 6`] = `
Vector2D {
  "x": -37.49999999999997,
  "y": 63.15698604072066,
}
`;

exports[`CurvedTileModel can compute the position of the output point for a tile oriented to the right with a ratio of 4 1`] = `
Vector2D {
  "x": -29.306379983154613,
  "y": 147.33312146055957,
}
`;

exports[`CurvedTileModel can compute the position of the output point for a tile oriented to the right with a ratio of 4 2`] = `
Vector2D {
  "x": 70.69362001684539,
  "y": 247.33312146055957,
}
`;

exports[`CurvedTileModel can compute the position of the output point for a tile oriented to the right with a ratio of 4 3`] = `
Vector2D {
  "x": -47.33312146055957,
  "y": 70.6936200168454,
}
`;

exports[`CurvedTileModel can compute the position of the output point for a tile oriented to the right with a ratio of 4 4`] = `
Vector2D {
  "x": -29.306379983154613,
  "y": 147.33312146055957,
}
`;

exports[`CurvedTileModel can compute the position of the output point for a tile oriented to the right with a ratio of 4 5`] = `
Vector2D {
  "x": 70.69362001684539,
  "y": 247.33312146055957,
}
`;

exports[`CurvedTileModel can compute the position of the output point for a tile oriented to the right with a ratio of 4 6`] = `
Vector2D {
  "x": -47.33312146055957,
  "y": 70.6936200168454,
}
`;

exports[`CurvedTileModel can compute the rotation angle for a tile oriented to the left with a ratio of 0.5 1`] = `90`;

exports[`CurvedTileModel can compute the rotation angle for a tile oriented to the left with a ratio of 0.5 2`] = `90`;

exports[`CurvedTileModel can compute the rotation angle for a tile oriented to the left with a ratio of 1 1`] = `90`;

exports[`CurvedTileModel can compute the rotation angle for a tile oriented to the left with a ratio of 1 2`] = `90`;

exports[`CurvedTileModel can compute the rotation angle for a tile oriented to the left with a ratio of 2 1`] = `135`;

exports[`CurvedTileModel can compute the rotation angle for a tile oriented to the left with a ratio of 2 2`] = `135`;

exports[`CurvedTileModel can compute the rotation angle for a tile oriented to the left with a ratio of 3 1`] = `150`;

exports[`CurvedTileModel can compute the rotation angle for a tile oriented to the left with a ratio of 3 2`] = `150`;

exports[`CurvedTileModel can compute the rotation angle for a tile oriented to the left with a ratio of 4 1`] = `157.5`;

exports[`CurvedTileModel can compute the rotation angle for a tile oriented to the left with a ratio of 4 2`] = `157.5`;

exports[`CurvedTileModel can compute the rotation angle for a tile oriented to the right with a ratio of 0.5 1`] = `0`;

exports[`CurvedTileModel can compute the rotation angle for a tile oriented to the right with a ratio of 0.5 2`] = `0`;

exports[`CurvedTileModel can compute the rotation angle for a tile oriented to the right with a ratio of 1 1`] = `0`;

exports[`CurvedTileModel can compute the rotation angle for a tile oriented to the right with a ratio of 1 2`] = `0`;

exports[`CurvedTileModel can compute the rotation angle for a tile oriented to the right with a ratio of 2 1`] = `0`;

exports[`CurvedTileModel can compute the rotation angle for a tile oriented to the right with a ratio of 2 2`] = `0`;

exports[`CurvedTileModel can compute the rotation angle for a tile oriented to the right with a ratio of 3 1`] = `0`;

exports[`CurvedTileModel can compute the rotation angle for a tile oriented to the right with a ratio of 3 2`] = `0`;

exports[`CurvedTileModel can compute the rotation angle for a tile oriented to the right with a ratio of 4 1`] = `0`;

exports[`CurvedTileModel can compute the rotation angle for a tile oriented to the right with a ratio of 4 2`] = `0`;

exports[`CurvedTileModel can compute the side of the curve for a tile with a ratio of 0.5 1`] = `0`;

exports[`CurvedTileModel can compute the side of the curve for a tile with a ratio of 1 1`] = `0`;

exports[`CurvedTileModel can compute the side of the curve for a tile with a ratio of 2 1`] = `0`;

exports[`CurvedTileModel can compute the side of the curve for a tile with a ratio of 3 1`] = `0`;

exports[`CurvedTileModel can compute the side of the curve for a tile with a ratio of 4 1`] = `0`;

exports[`CurvedTileModel can export to an object a tile oriented to the left having a ratio of 1 1`] = `
Object {
  "direction": "left",
  "ratio": 1,
  "type": "curved-tile",
}
`;

exports[`CurvedTileModel can export to an object a tile oriented to the left having a ratio of 2 1`] = `
Object {
  "direction": "left",
  "ratio": 2,
  "type": "curved-tile",
}
`;

exports[`CurvedTileModel can export to an object a tile oriented to the right having a ratio of 1 1`] = `
Object {
  "direction": "right",
  "ratio": 1,
  "type": "curved-tile",
}
`;

exports[`CurvedTileModel can export to an object a tile oriented to the right having a ratio of 2 1`] = `
Object {
  "direction": "right",
  "ratio": 2,
  "type": "curved-tile",
}
`;
